--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,86 @@
-/*# sourceMappingURL=style.css.map */
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+body {
+  font-family: "Source Code Pro", monospace;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pma {
+  border-radius: 10px;
+  background: #ffffff;
+  box-shadow: 20px 20px 60px #d9d9d9, -20px -20px 60px #ffffff;
+  padding: 10px;
+}
+.pma__title {
+  font-size: 50px;
+}
+.pma__time {
+  text-align: center;
+  font-size: 40px;
+}
+.pma__current, .pma__input {
+  font-size: 20px;
+}
+.pma__input {
+  font: inherit;
+  padding: 5px;
+  width: 62%;
+  height: 30px;
+  border: none;
+  border-radius: 2px;
+  background: #e0e0e0;
+  box-shadow: inset 1px 1px 2px #bcbcbc, inset -1px -1px 2px #ffffff;
+}
+.pma__add {
+  font: inherit;
+  padding: 10px;
+  height: 30px;
+  border: none;
+  border-radius: 17px;
+  background: linear-gradient(145deg, #ffffff, #e6e6e6);
+  box-shadow: 6px 6px 10px #d6d6d6, -6px -6px 10px #ffffff;
+  line-height: 50%;
+}
+
+.tasks-container, form {
+  width: 450px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.task {
+  border-top: 2px dashed black;
+  width: 450px;
+  margin-top: 10px;
+  padding: 20px 5px 10px 5px;
+  padding: 10px;
+  justify-content: space-between;
+}
+.task__title {
+  width: 65%;
+}
+.task__status {
+  width: auto;
+}/*# sourceMappingURL=style.css.map */
