--- a/css/style.css
+++ b/css/style.css
@@ -54,13 +54,13 @@ body {
 }
 .pma__add {
   font: inherit;
-  padding: 10px;
+  padding: 3px;
   height: 30px;
   border: none;
   border-radius: 17px;
   background: linear-gradient(145deg, #ffffff, #e6e6e6);
   box-shadow: 6px 6px 10px #d6d6d6, -6px -6px 10px #ffffff;
-  line-height: 50%;
+  line-height: 60%;
 }
 
 .tasks-container, form {
@@ -83,4 +83,13 @@ body {
 }
 .task__status {
   width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.icon {
+  height: 18px;
+  width: 18px;
+  margin: 4px;
 }/*# sourceMappingURL=style.css.map */
